v3.13/_sources/enum_dnnl_graph_op_kind.rst
.. index:: pair: enum; kind
.. _doxid-classdnnl_1_1graph_1_1op_1ad54d9bef2fbf3c2a5f4190fa2497568c:

enum dnnl::graph::op::kind
==========================

Kinds of operations.

.. ref-code-block:: cpp
	:class: doxyrest-overview-code-block

	#include <dnnl_graph.hpp>

	enum kind
	{
	    :target:`Abs<doxid-classdnnl_1_1graph_1_1op_1ad54d9bef2fbf3c2a5f4190fa2497568ca1e34af023adeb7d5f484f8eb4b9826b6>`                          = dnnl_graph_op_abs,
	    :target:`AbsBackward<doxid-classdnnl_1_1graph_1_1op_1ad54d9bef2fbf3c2a5f4190fa2497568ca669e7d6b1ac0e5f3d94230004e27c2d9>`                  = dnnl_graph_op_abs_backward,
	    :target:`Add<doxid-classdnnl_1_1graph_1_1op_1ad54d9bef2fbf3c2a5f4190fa2497568caec211f7c20af43e742bf2570c3cb84f9>`                          = dnnl_graph_op_add,
	    :target:`AvgPool<doxid-classdnnl_1_1graph_1_1op_1ad54d9bef2fbf3c2a5f4190fa2497568ca42c43b58c74c88c7ba8e108ce5a0a01a>`                      = dnnl_graph_op_avg_pool,
	    :target:`AvgPoolBackward<doxid-classdnnl_1_1graph_1_1op_1ad54d9bef2fbf3c2a5f4190fa2497568caf21729fddf530a10fdb701ad5e5e9d91>`              = dnnl_graph_op_avg_pool_backward,
	    :target:`BatchNormForwardTraining<doxid-classdnnl_1_1graph_1_1op_1ad54d9bef2fbf3c2a5f4190fa2497568cade3b4309a065139b7fd0f0514255bbf5>`     = dnnl_graph_op_batch_norm_forward_training,
	    :target:`BatchNormInference<doxid-classdnnl_1_1graph_1_1op_1ad54d9bef2fbf3c2a5f4190fa2497568cabe929ebf54f954ad577d5255ee3447b0>`           = dnnl_graph_op_batch_norm_inference,
	    :target:`BatchNormTrainingBackward<doxid-classdnnl_1_1graph_1_1op_1ad54d9bef2fbf3c2a5f4190fa2497568ca40da751e84bfce763d13da53d4cfec5b>`    = dnnl_graph_op_batch_norm_backward,
	    :target:`BiasAdd<doxid-classdnnl_1_1graph_1_1op_1ad54d9bef2fbf3c2a5f4190fa2497568caffc00d5d35e0e00ff76996c5af883d95>`                      = dnnl_graph_op_bias_add,
	    :target:`BiasAddBackward<doxid-classdnnl_1_1graph_1_1op_1ad54d9bef2fbf3c2a5f4190fa2497568cabe475e9b2909f0106dca1a49ca39fde0>`              = dnnl_graph_op_bias_add_backward,
	    :target:`Clamp<doxid-classdnnl_1_1graph_1_1op_1ad54d9bef2fbf3c2a5f4190fa2497568ca08825280e3f8137556325061ba67ff8c>`                        = dnnl_graph_op_clamp,
	    :target:`ClampBackward<doxid-classdnnl_1_1graph_1_1op_1ad54d9bef2fbf3c2a5f4190fa2497568ca61c8476e649d3353608f09fc14170e81>`                = dnnl_graph_op_clamp_backward,
	    :target:`Concat<doxid-classdnnl_1_1graph_1_1op_1ad54d9bef2fbf3c2a5f4190fa2497568cae20f0f2826a6549809f050b86274567f>`                       = dnnl_graph_op_concat,
	    :target:`Convolution<doxid-classdnnl_1_1graph_1_1op_1ad54d9bef2fbf3c2a5f4190fa2497568cafa0f0ae43fdca46d1d68255409ec0b89>`                  = dnnl_graph_op_convolution,
	    :target:`ConvolutionBackwardData<doxid-classdnnl_1_1graph_1_1op_1ad54d9bef2fbf3c2a5f4190fa2497568ca024d27be8d959484b864f0ab51635190>`      = dnnl_graph_op_convolution_backward_data,
	    :target:`ConvolutionBackwardWeights<doxid-classdnnl_1_1graph_1_1op_1ad54d9bef2fbf3c2a5f4190fa2497568cafab42ac7c003ae0e458559672ba075c8>`   = dnnl_graph_op_convolution_backward_weights,
	    :target:`ConvTranspose<doxid-classdnnl_1_1graph_1_1op_1ad54d9bef2fbf3c2a5f4190fa2497568ca670f69d7d69132701f3bb0fa5a2e7eec>`                = dnnl_graph_op_conv_transpose,
	    :target:`ConvTransposeBackwardData<doxid-classdnnl_1_1graph_1_1op_1ad54d9bef2fbf3c2a5f4190fa2497568ca356b19e0abce668e7db6850696e0c943>`    = dnnl_graph_op_conv_transpose_backward_data,
	    :target:`ConvTransposeBackwardWeights<doxid-classdnnl_1_1graph_1_1op_1ad54d9bef2fbf3c2a5f4190fa2497568ca3ce57d17c3931f3292a4b18f697c4fb2>` = dnnl_graph_op_conv_transpose_backward_weights,
	    :target:`Dequantize<doxid-classdnnl_1_1graph_1_1op_1ad54d9bef2fbf3c2a5f4190fa2497568ca9bc35e069257a508e14ed82965a8661d>`                   = dnnl_graph_op_dequantize,
	    :target:`Divide<doxid-classdnnl_1_1graph_1_1op_1ad54d9bef2fbf3c2a5f4190fa2497568ca0b914e196182d02615487e9793ecff3d>`                       = dnnl_graph_op_divide,
	    :target:`DynamicDequantize<doxid-classdnnl_1_1graph_1_1op_1ad54d9bef2fbf3c2a5f4190fa2497568cae5ed480a52d5ec18bec4a7daf69ab5ca>`            = dnnl_graph_op_dynamic_dequantize,
	    :target:`DynamicQuantize<doxid-classdnnl_1_1graph_1_1op_1ad54d9bef2fbf3c2a5f4190fa2497568ca8178f2b749b7ef30f1e67f17ee62fd67>`              = dnnl_graph_op_dynamic_quantize,
	    :target:`Elu<doxid-classdnnl_1_1graph_1_1op_1ad54d9bef2fbf3c2a5f4190fa2497568caed67cf7d54c570e4c4891800f085f41d>`                          = dnnl_graph_op_elu,
	    :target:`EluBackward<doxid-classdnnl_1_1graph_1_1op_1ad54d9bef2fbf3c2a5f4190fa2497568ca63aa332f0d9a640d7e8d66b6c4bf2b08>`                  = dnnl_graph_op_elu_backward,
	    :target:`End<doxid-classdnnl_1_1graph_1_1op_1ad54d9bef2fbf3c2a5f4190fa2497568ca87557f11575c0ad78e4e28abedc13b6e>`                          = dnnl_graph_op_end,
	    :target:`Exp<doxid-classdnnl_1_1graph_1_1op_1ad54d9bef2fbf3c2a5f4190fa2497568cacad39a154bffb61175f674d6eefaf6d0>`                          = dnnl_graph_op_exp,
	    :target:`GELU<doxid-classdnnl_1_1graph_1_1op_1ad54d9bef2fbf3c2a5f4190fa2497568ca6c83d4d579e33c2e1b09f2e9825fcbc6>`                         = dnnl_graph_op_gelu,
	    :target:`GELUBackward<doxid-classdnnl_1_1graph_1_1op_1ad54d9bef2fbf3c2a5f4190fa2497568caa24ae8d62d39dadcc3f6a815b21a9321>`                 = dnnl_graph_op_gelu_backward,
	    :target:`GroupNorm<doxid-classdnnl_1_1graph_1_1op_1ad54d9bef2fbf3c2a5f4190fa2497568ca0bdc488b70bc3f32df43cc6dfc300aef>`                    = dnnl_graph_op_group_norm,
	    :target:`HardSigmoid<doxid-classdnnl_1_1graph_1_1op_1ad54d9bef2fbf3c2a5f4190fa2497568ca97097feff8bd1c5d47291569316d4339>`                  = dnnl_graph_op_hard_sigmoid,
	    :target:`HardSigmoidBackward<doxid-classdnnl_1_1graph_1_1op_1ad54d9bef2fbf3c2a5f4190fa2497568ca2f0513bf2be05a6ecae301a0d9d8295c>`          = dnnl_graph_op_hard_sigmoid_backward,
	    :target:`HardSwish<doxid-classdnnl_1_1graph_1_1op_1ad54d9bef2fbf3c2a5f4190fa2497568ca0877e5b3fbe9d7569df6399609ed0186>`                    = dnnl_graph_op_hard_swish,
	    :target:`HardSwishBackward<doxid-classdnnl_1_1graph_1_1op_1ad54d9bef2fbf3c2a5f4190fa2497568caa47d20311af12259fe7c31b0175aaadf>`            = dnnl_graph_op_hard_swish_backward,
	    :target:`Interpolate<doxid-classdnnl_1_1graph_1_1op_1ad54d9bef2fbf3c2a5f4190fa2497568cad53238014015da17926bca398282211f>`                  = dnnl_graph_op_interpolate,
	    :target:`InterpolateBackward<doxid-classdnnl_1_1graph_1_1op_1ad54d9bef2fbf3c2a5f4190fa2497568cad8e1c1bdb9ab4a14f08a9efde1bd68be>`          = dnnl_graph_op_interpolate_backward,
	    :target:`LayerNorm<doxid-classdnnl_1_1graph_1_1op_1ad54d9bef2fbf3c2a5f4190fa2497568cac363ac7ca063bb8a75fb8a11883bcb2c>`                    = dnnl_graph_op_layer_norm,
	    :target:`LayerNormBackward<doxid-classdnnl_1_1graph_1_1op_1ad54d9bef2fbf3c2a5f4190fa2497568ca1270acc90c83da820e612aad1ed70d57>`            = dnnl_graph_op_layer_norm_backward,
	    :target:`LeakyReLU<doxid-classdnnl_1_1graph_1_1op_1ad54d9bef2fbf3c2a5f4190fa2497568cabb7ba525e0c40179fab22b4f7021e1f8>`                    = dnnl_graph_op_leaky_relu,
	    :target:`Log<doxid-classdnnl_1_1graph_1_1op_1ad54d9bef2fbf3c2a5f4190fa2497568cace0be71e33226e4c1db2bcea5959f16b>`                          = dnnl_graph_op_log,
	    :target:`LogSoftmax<doxid-classdnnl_1_1graph_1_1op_1ad54d9bef2fbf3c2a5f4190fa2497568cac21dbda57d88c21ec9857f5d1522c488>`                   = dnnl_graph_op_log_softmax,
	    :target:`LogSoftmaxBackward<doxid-classdnnl_1_1graph_1_1op_1ad54d9bef2fbf3c2a5f4190fa2497568ca5a84eca175aa10749ea6f271ff003051>`           = dnnl_graph_op_log_softmax_backward,
	    :target:`MatMul<doxid-classdnnl_1_1graph_1_1op_1ad54d9bef2fbf3c2a5f4190fa2497568ca5debeabaece967a6732b4182ba0269ae>`                       = dnnl_graph_op_matmul,
	    :target:`Maximum<doxid-classdnnl_1_1graph_1_1op_1ad54d9bef2fbf3c2a5f4190fa2497568ca8321e79c278ec510f63675c040594892>`                      = dnnl_graph_op_maximum,
	    :target:`MaxPool<doxid-classdnnl_1_1graph_1_1op_1ad54d9bef2fbf3c2a5f4190fa2497568ca5c3dda2f5672002a992bf6ca7301dceb>`                      = dnnl_graph_op_max_pool,
	    :target:`MaxPoolBackward<doxid-classdnnl_1_1graph_1_1op_1ad54d9bef2fbf3c2a5f4190fa2497568cac9a94ef1134b1823141d4e10775b8895>`              = dnnl_graph_op_max_pool_backward,
	    :target:`Minimum<doxid-classdnnl_1_1graph_1_1op_1ad54d9bef2fbf3c2a5f4190fa2497568caa1d0ec6d56f8833a078b5a7ac4caf2d4>`                      = dnnl_graph_op_minimum,
	    :target:`Mish<doxid-classdnnl_1_1graph_1_1op_1ad54d9bef2fbf3c2a5f4190fa2497568caeb72370b2ec1d826723f8aa9d818261c>`                         = dnnl_graph_op_mish,
	    :target:`MishBackward<doxid-classdnnl_1_1graph_1_1op_1ad54d9bef2fbf3c2a5f4190fa2497568ca0c99478efe1f7f5d0f0ceeec045599f6>`                 = dnnl_graph_op_mish_backward,
	    :target:`Multiply<doxid-classdnnl_1_1graph_1_1op_1ad54d9bef2fbf3c2a5f4190fa2497568cae257376d913f3b53cbb4a9b19d770648>`                     = dnnl_graph_op_multiply,
	    :target:`Pow<doxid-classdnnl_1_1graph_1_1op_1ad54d9bef2fbf3c2a5f4190fa2497568ca8be6d3e955290ee50c00a4bc92aa7749>`                          = dnnl_graph_op_pow,
	    :target:`PReLU<doxid-classdnnl_1_1graph_1_1op_1ad54d9bef2fbf3c2a5f4190fa2497568ca474e0c94ac3a455d2b98a72feba8fba4>`                        = dnnl_graph_op_prelu,
	    :target:`PReLUBackward<doxid-classdnnl_1_1graph_1_1op_1ad54d9bef2fbf3c2a5f4190fa2497568cabcf5fc5e8677093764c3c66344a8fde1>`                = dnnl_graph_op_prelu_backward,
	    :target:`Quantize<doxid-classdnnl_1_1graph_1_1op_1ad54d9bef2fbf3c2a5f4190fa2497568caca39930e22f40d10155a57dba32240bb>`                     = dnnl_graph_op_quantize,
	    :target:`Reciprocal<doxid-classdnnl_1_1graph_1_1op_1ad54d9bef2fbf3c2a5f4190fa2497568ca217a1d605e6707538902ff7a0368e90e>`                   = dnnl_graph_op_reciprocal,
	    :target:`ReduceL1<doxid-classdnnl_1_1graph_1_1op_1ad54d9bef2fbf3c2a5f4190fa2497568cad9f3424fab477afb77458fd87086e1ff>`                     = dnnl_graph_op_reduce_l1,
	    :target:`ReduceL2<doxid-classdnnl_1_1graph_1_1op_1ad54d9bef2fbf3c2a5f4190fa2497568ca507bf5cd29a034c8e82157dc3b2cc38a>`                     = dnnl_graph_op_reduce_l2,
	    :target:`ReduceMax<doxid-classdnnl_1_1graph_1_1op_1ad54d9bef2fbf3c2a5f4190fa2497568ca2f4f9fb3a3e5a318cf6125b3fe8ddfdd>`                    = dnnl_graph_op_reduce_max,
	    :target:`ReduceMean<doxid-classdnnl_1_1graph_1_1op_1ad54d9bef2fbf3c2a5f4190fa2497568ca37d94f45ecc4c2e1cde5522b0cbe7206>`                   = dnnl_graph_op_reduce_mean,
	    :target:`ReduceMin<doxid-classdnnl_1_1graph_1_1op_1ad54d9bef2fbf3c2a5f4190fa2497568ca03caa9192d391006927f9de0dded537e>`                    = dnnl_graph_op_reduce_min,
	    :target:`ReduceProd<doxid-classdnnl_1_1graph_1_1op_1ad54d9bef2fbf3c2a5f4190fa2497568ca917a7552d46508d5ddbf327a3bc33cd5>`                   = dnnl_graph_op_reduce_prod,
	    :target:`ReduceSum<doxid-classdnnl_1_1graph_1_1op_1ad54d9bef2fbf3c2a5f4190fa2497568ca5e47e6e2afb2e1368df09735cc13205a>`                    = dnnl_graph_op_reduce_sum,
	    :target:`ReLU<doxid-classdnnl_1_1graph_1_1op_1ad54d9bef2fbf3c2a5f4190fa2497568cadd10d919fa85cf27fc78c0e06fe0b378>`                         = dnnl_graph_op_relu,
	    :target:`ReLUBackward<doxid-classdnnl_1_1graph_1_1op_1ad54d9bef2fbf3c2a5f4190fa2497568cab1af02514fdcb59d7a36089967706eda>`                 = dnnl_graph_op_relu_backward,
	    :target:`Reorder<doxid-classdnnl_1_1graph_1_1op_1ad54d9bef2fbf3c2a5f4190fa2497568ca332c80b1838dc515f5031e09da3b7f3f>`                      = dnnl_graph_op_reorder,
	    :target:`Round<doxid-classdnnl_1_1graph_1_1op_1ad54d9bef2fbf3c2a5f4190fa2497568cab7f41fc1412ad2ee75e9b2635d3b9d5c>`                        = dnnl_graph_op_round,
	    :target:`RMSNorm<doxid-classdnnl_1_1graph_1_1op_1ad54d9bef2fbf3c2a5f4190fa2497568ca533a34c62723462c962ca7535ca06570>`                      = dnnl_graph_op_rms_norm,
	    :target:`Select<doxid-classdnnl_1_1graph_1_1op_1ad54d9bef2fbf3c2a5f4190fa2497568cae0626222614bdee31951d84c64e5e9ff>`                       = dnnl_graph_op_select,
	    :target:`Sigmoid<doxid-classdnnl_1_1graph_1_1op_1ad54d9bef2fbf3c2a5f4190fa2497568ca21eebb164e4b8b9bcf64fdb4d8d5dff4>`                      = dnnl_graph_op_sigmoid,
	    :target:`SigmoidBackward<doxid-classdnnl_1_1graph_1_1op_1ad54d9bef2fbf3c2a5f4190fa2497568ca0f0448710ed382375b32fa44a09c13ad>`              = dnnl_graph_op_sigmoid_backward,
	    :target:`SoftMax<doxid-classdnnl_1_1graph_1_1op_1ad54d9bef2fbf3c2a5f4190fa2497568ca9accec944de94c5de06927ebb662bc74>`                      = dnnl_graph_op_softmax,
	    :target:`SoftMaxBackward<doxid-classdnnl_1_1graph_1_1op_1ad54d9bef2fbf3c2a5f4190fa2497568ca27017e617886475c0a8afb6fe87b57a7>`              = dnnl_graph_op_softmax_backward,
	    :target:`SoftPlus<doxid-classdnnl_1_1graph_1_1op_1ad54d9bef2fbf3c2a5f4190fa2497568ca28be2ec1c34271f6b669a690b603047e>`                     = dnnl_graph_op_softplus,
	    :target:`SoftPlusBackward<doxid-classdnnl_1_1graph_1_1op_1ad54d9bef2fbf3c2a5f4190fa2497568ca1edcd24ba2ad5b4f920f2bee864a3545>`             = dnnl_graph_op_softplus_backward,
	    :target:`Sqrt<doxid-classdnnl_1_1graph_1_1op_1ad54d9bef2fbf3c2a5f4190fa2497568caae77f3ad25595e35b327334d89410054>`                         = dnnl_graph_op_sqrt,
	    :target:`SqrtBackward<doxid-classdnnl_1_1graph_1_1op_1ad54d9bef2fbf3c2a5f4190fa2497568cab48abec186eac227b41595c120bbbb6b>`                 = dnnl_graph_op_sqrt_backward,
	    :target:`Square<doxid-classdnnl_1_1graph_1_1op_1ad54d9bef2fbf3c2a5f4190fa2497568caceb46ca115d05c51aa5a16a8867c3304>`                       = dnnl_graph_op_square,
	    :target:`SquaredDifference<doxid-classdnnl_1_1graph_1_1op_1ad54d9bef2fbf3c2a5f4190fa2497568caad29ae855c59cd79aecc6f0e5e49f237>`            = dnnl_graph_op_squared_difference,
	    :target:`StaticReshape<doxid-classdnnl_1_1graph_1_1op_1ad54d9bef2fbf3c2a5f4190fa2497568cac49367a982e1c363f214cca3205ad197>`                = dnnl_graph_op_static_reshape,
	    :target:`StaticTranspose<doxid-classdnnl_1_1graph_1_1op_1ad54d9bef2fbf3c2a5f4190fa2497568ca257e611507c69aac9b9ed9498d64e223>`              = dnnl_graph_op_static_transpose,
	    :target:`Subtract<doxid-classdnnl_1_1graph_1_1op_1ad54d9bef2fbf3c2a5f4190fa2497568ca1d9baf077ee87921f57a8fe42d510b65>`                     = dnnl_graph_op_subtract,
	    :target:`Tanh<doxid-classdnnl_1_1graph_1_1op_1ad54d9bef2fbf3c2a5f4190fa2497568cacc132a41cab5676334f353a22a0aa5c5>`                         = dnnl_graph_op_tanh,
	    :target:`TanhBackward<doxid-classdnnl_1_1graph_1_1op_1ad54d9bef2fbf3c2a5f4190fa2497568ca053d15d40ee6f59e14c099b75f58aace>`                 = dnnl_graph_op_tanh_backward,
	    :target:`TypeCast<doxid-classdnnl_1_1graph_1_1op_1ad54d9bef2fbf3c2a5f4190fa2497568cab22a33d3b2e6fae95268c208cca57e2a>`                     = dnnl_graph_op_type_cast,
	    :target:`Wildcard<doxid-classdnnl_1_1graph_1_1op_1ad54d9bef2fbf3c2a5f4190fa2497568cac4a0dbaac3bd0f3bf581ad822f5fb4b4>`                     = dnnl_graph_op_wildcard,
	    :target:`GenIndex<doxid-classdnnl_1_1graph_1_1op_1ad54d9bef2fbf3c2a5f4190fa2497568ca83f66d01cc0fd97b99b814b8804d3f0d>`                     = dnnl_graph_op_gen_index,
	    :target:`GreaterEqual<doxid-classdnnl_1_1graph_1_1op_1ad54d9bef2fbf3c2a5f4190fa2497568ca758b05d899def79c9eb864ad4f96be1f>`                 = dnnl_graph_op_greater_equal,
	    :target:`Dropout<doxid-classdnnl_1_1graph_1_1op_1ad54d9bef2fbf3c2a5f4190fa2497568ca09bb9294aa4a843883a3f401aeaf8b5b>`                      = dnnl_graph_op_dropout,
	    :target:`LastSymbol<doxid-classdnnl_1_1graph_1_1op_1ad54d9bef2fbf3c2a5f4190fa2497568ca0dba9d29480f864da919cf40b3a9aae3>`                   = dnnl_graph_op_last_symbol,
	};

